--- a/data/index.html
+++ b/data/index.html
@@ -1,5 +1,1 @@
-<h1>Testovaci stranka s daty</h1>
-<hr />
-<p>Obsah dat</p>
-<p>Zmeneno</p>
-<p>A znovu</p>
+<h1>Data</h1><p>Last update: úterý 13. září 2022</p>
